[gd_scene load_steps=13 format=2]

[ext_resource path="res://world/all_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://world/all_tile_solid.tres" type="TileSet" id=2]
[ext_resource path="res://puzzle/board/board.gd" type="Script" id=3]
[ext_resource path="res://puzzle/tiles/Tile.tscn" type="PackedScene" id=4]
[ext_resource path="res://puzzle/board/states/pre_game.gd" type="Script" id=5]
[ext_resource path="res://puzzle/board/states/post_game.gd" type="Script" id=6]
[ext_resource path="res://puzzle/board/states/waiting_for_enemy.gd" type="Script" id=7]
[ext_resource path="res://puzzle/board/states/resolving_matches.gd" type="Script" id=8]
[ext_resource path="res://puzzle/board/states/waiting_for_input.gd" type="Script" id=9]
[ext_resource path="res://puzzle/board/states/shuffling_board.gd" type="Script" id=10]
[ext_resource path="res://puzzle/board/states/board_fsm.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 72, 96 )

[node name="Board" type="Area2D"]
script = ExtResource( 3 )
TilePrefab = ExtResource( 4 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0 )

[node name="Guide" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 458793, 1, 0, 852000, 2, 0, 131116, 3, 0, 458793, 4, 0, 1048609, 5, 0, 852000, 6, 0, 852000, 7, 0, 458793, 8, 0, 458793, 65536, 0, 131116, 65537, 0, 852000, 65538, 0, 458793, 65539, 0, 131116, 65540, 0, 1048609, 65541, 0, 131116, 65542, 0, 458793, 65543, 0, 131116, 65544, 0, 1048609, 131072, 0, 1048609, 131073, 0, 852000, 131074, 0, 852000, 131075, 0, 852000, 131076, 0, 458793, 131077, 0, 1048609, 131078, 0, 1048609, 131079, 0, 1048609, 131080, 0, 1048609, 196608, 0, 1048609, 196609, 0, 1048609, 196610, 0, 131116, 196611, 0, 458793, 196612, 0, 131116, 196613, 0, 131116, 196614, 0, 458793, 196615, 0, 1048609, 196616, 0, 1048609, 262144, 0, 458793, 262145, 0, 1048609, 262146, 0, 458793, 262147, 0, 131116, 262148, 0, 458793, 262149, 0, 458793, 262150, 0, 852000, 262151, 0, 852000, 262152, 0, 458793, 327680, 0, 458793, 327681, 0, 852000, 327682, 0, 458793, 327683, 0, 1048609, 327684, 0, 852000, 327685, 0, 852000, 327686, 0, 852000, 327687, 0, 131116, 327688, 0, 458793, 393216, 0, 131116, 393217, 0, 458793, 393218, 0, 131116, 393219, 0, 1048609, 393220, 0, 458793, 393221, 0, 458793, 393222, 0, 852000, 393223, 0, 458793, 393224, 0, 852000, 458752, 0, 458793, 458753, 0, 458793, 458754, 0, 1048609, 458755, 0, 1048609, 458756, 0, 1048609, 458757, 0, 1048609, 458758, 0, 131116, 458759, 0, 852000, 458760, 0, 852000, 524288, 0, 458793, 524289, 0, 131116, 524290, 0, 1048609, 524291, 0, 131116, 524292, 0, 458793, 524293, 0, 1048609, 524294, 0, 1048609, 524295, 0, 1048609, 524296, 0, 852000, 589824, 0, 458793, 589825, 0, 1048609, 589826, 0, 852000, 589827, 0, 458793, 589828, 0, 131116, 589829, 0, 458793, 589830, 0, 131116, 589831, 0, 458793, 589832, 0, 852000, 655360, 0, 458793, 655361, 0, 1048609, 655362, 0, 131116, 655363, 0, 458793, 655364, 0, 458793, 655365, 0, 458793, 655366, 0, 131116, 655367, 0, 458793, 655368, 0, 852000, 720896, 0, 458793, 720897, 0, 1048609, 720898, 0, 1048609, 720899, 0, 458793, 720900, 0, 852000, 720901, 0, 852000, 720902, 0, 852000, 720903, 0, 458793, 720904, 0, 458793 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 72, 96 )
shape = SubResource( 1 )

[node name="InstancedTiles" type="Node2D" parent="."]

[node name="States" type="Node" parent="."]
script = ExtResource( 11 )
START_STATE = NodePath("PreGame")

[node name="PreGame" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="WatingForPlayer" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="WaitingForEnemy" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="ResolvingMatches" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="ShufflingBoard" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="PostGame" type="Node" parent="States"]
script = ExtResource( 6 )
[connection signal="input_event" from="." to="." method="_on_Board_input_event"]
